unpackaged/main/default/objects/psamsp__ExportBatchSettings__c/psamsp__ExportBatchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ExportBatchSettings</label>
</CustomObject>