unpackaged/main/default/objects/psamsp__ExportBatchSettings__c/fields/psamsp__CapPercentWorkComplete__c.field-meta.xml
<CustomField>
    <fullName>psamsp__CapPercentWorkComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cap Percent Work Complete to 100</description>
    <inlineHelpText>Cap Percent Work Complete to 100</inlineHelpText>
    <label>Cap Percent Work Complete</label>
    <type>Checkbox</type>
</CustomField>