unpackaged/main/default/objects/psamsp__ExportBatchSettings__c/fields/psamsp__Custom_ProjectTask_Order_By__c.field-meta.xml
<CustomField>
    <fullName>psamsp__Custom_ProjectTask_Order_By__c</fullName>
    <label>Custom Project Task Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>