unpackaged/main/default/objects/psamsp__ExportBatchSettings__c/fields/psamsp__RetainWBSOrder__c.field-meta.xml
<CustomField>
    <fullName>psamsp__RetainWBSOrder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RetainWBSOrder</label>
    <type>Checkbox</type>
</CustomField>